--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
 script:
   - poetry run coverage run --source=demo-apitest -m pytest -v
   - poetry run coverage report -m
-after_success:
-  - poetry run coveralls
+#after_success:
+#  - poetry run coveralls
